// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextRenderer — snapshots snapshot: bold weight + muted color 1`] = `
<Text
  style={
    [
      {
        "fontSize": 16,
        "fontWeight": "600",
      },
      {
        "color": "#5e6470",
      },
    ]
  }
>
  Bold muted
</Text>
`;

exports[`TextRenderer — snapshots snapshot: default (no weight/color) 1`] = `
<Text
  style={
    [
      {
        "fontSize": 16,
        "fontWeight": "400",
      },
      {
        "color": "#0a0a0b",
      },
    ]
  }
>
  Default text
</Text>
`;

exports[`TextRenderer — snapshots snapshot: destructive color 1`] = `
<Text
  style={
    [
      {
        "fontSize": 16,
        "fontWeight": "400",
      },
      {
        "color": "#b3261e",
      },
    ]
  }
>
  Destructive
</Text>
`;
